<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <group android:id="@+id/top_sub">
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/ic_nav_all"
                android:title="@string/title_nav_all" />

        </group>

        <item
            android:id="@+id/nav_sights"
            android:icon="@drawable/ic_nav_sights"
            android:title="@string/title_nav_tour" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_nav_food"
            android:title="@string/title_nav_food" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_nav_hotels"
            android:title="@string/title_nav_hotels" />
        <item
            android:id="@+id/nav_beaches"
            android:icon="@drawable/ic_nav_beach"
            android:title="@string/title_nav_ent" />

    </group>
    <!--Tourist Destination-->
    <!--Food & Drink-->
    <!--Hotels-->
    <!--Entertainment-->
    <!--Sport-->
    <!--Shopping-->
    <!--Transportation-->
    <!--Religion-->
    <!--Public Services-->
    <!--Money-->

</menu>
